--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -7,7 +7,7 @@ layout: page
   <div class="col-md-8">
 
     {% include index/description.html %}
-    {% include index/carousel.html title="Sample Items" height="300" %}
+    {% include index/carousel.html title="Artworks" height="500" %}
   
   </div>
   <div class="col-md-4">  
@@ -22,8 +22,6 @@ layout: page
 
   </div>
   <div class="col-md-12">
-
-    {% include index/data-download.html %}
 
   </div>
 </div>
